mdapipkg/objects/Amendment_Slip__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Type__c</fullName>
        <label>Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trader</fullName>
                    <label>Peer Approval</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                    <label>Manager Approval</label>
                </value>
                <value>
                    <fullName>NCE Manager</fullName>
                    <isActive>false</isActive>
                    <label>Manager Approval (NCE)</label>
                </value>
                <value>
                    <fullName>NCE Trader</fullName>
                    <isActive>false</isActive>
                    <label>Peer Approval (NCE)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <valueField>$Source.Approver_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Username</field>
                <operation>notEqual</operation>
                <valueField>User.Username</valueField>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <valueField>$User.User_Group__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Slips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_No__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <label>Contract No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Amendment Slips</relationshipLabel>
        <relationshipName>Amendment_Slips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Amendment Slip</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Amendment Slip Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Slips</pluralLabel>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trader</fullName>
        <active>true</active>
        <description>This layout is only for Traders</description>
        <label>Trader</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>